Housekeeping removed file

--- a/src/Grpc.Reactive/Grpc.Reactive.csproj
+++ b/src/Grpc.Reactive/Grpc.Reactive.csproj
@@ -1,12 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="C:\Users\mueck\Documents\GitHub\Grpc.Reactive\..\LICENSE" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.14.0" />
