--- a/src/Grpc.Reactive.Test/Grpc.Reactive.Test.csproj
+++ b/src/Grpc.Reactive.Test/Grpc.Reactive.Test.csproj
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extras.Moq" Version="6.0.0" />
+    <PackageReference Include="coverlet.msbuild" Version="3.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="Microsoft.Reactive.Testing" Version="5.0.0" />
